--- a/angular-frontend/src/app/projects-page/projects-page.component.html
+++ b/angular-frontend/src/app/projects-page/projects-page.component.html
@@ -18,7 +18,7 @@
         [(ngModel)]="filterOptions.searchQuery"
         (input)="filterProjects()">
         <button id="add-project-btn" (click)="addProject()">
-          Add Project
+          New Project
         </button>
     </div>
   </nav>
