--- a/angular-frontend/src/app/tasks-page/tasks-page.component.html
+++ b/angular-frontend/src/app/tasks-page/tasks-page.component.html
@@ -1,6 +1,6 @@
 <div class="page-container">
   <header class="page-header">
-    <h1 class="page-title">Tasks Management</h1>
+    <h1 class="page-title">Tasks</h1>
   </header>
 
   <div class="search-actions">
@@ -29,7 +29,6 @@
       </select>
 
       <button class="btn btn-primary" (click)="addTask()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
         New Task
       </button>
     </div>
